<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:inputType="textPassword"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:layout_below="@+id/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/confirmPassword"
        android:text="@string/title_activity_register"
        android:onClick="registerClick"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonExportCheckouts"
        android:text="@string/export_checkouts"
        android:onClick="exportCheckouts"
        android:layout_below="@+id/buttonRegister"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonExportPayments"
        android:text="@string/export_payments"
        android:onClick="exportPayments"
        android:layout_below="@+id/buttonExportCheckouts"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDumpDatabase"
        android:text="@string/dump_database"
        android:onClick="dumpDatabase"
        android:layout_below="@id/buttonExportPayments"
    />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDumpDatabase"
        android:id="@+id/adminsList"
    >
    </ListView>
</RelativeLayout>