<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/helpRegisterTitle"
            android:text="@string/register_new_user"
            android:textSize="24sp"
        />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/helpRegisterText"
            android:layout_below="@+id/helpRegisterTitle"
            android:text="@string/user_register_text"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_below="@+id/helpRegisterText"
            android:hint="@string/name"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:id="@+id/surname"
            android:hint="@string/surname"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id"
            android:hint="@string/none"
            android:textSize="36sp"
            android:layout_below="@+id/surname"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/surname"
            android:layout_above="@+id/registerButton"
            android:layout_toRightOf="@+id/id"
            android:layout_toEndOf="@+id/id"
            android:text="@string/scan"
            android:id="@+id/userQRButton"
            android:onClick="buttonScanUserQR"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            android:text="@string/register_new_user"
            android:onClick="buttonRegister"
            android:layout_below="@+id/id"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/helpPaymentTitle"
            android:text="@string/payment"
            android:layout_below="@+id/registerButton"
            android:textSize="24sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helpPaymentText"
            android:text="@string/payment_text"
            android:layout_below="@+id/helpPaymentTitle"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/helpPaymentText"
            android:id="@+id/paymentButton"
            android:text="@string/start_payment"
            android:onClick="buttonScanQR"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/helpAddSessionsTitle"
            android:text="@string/add_sessions"
            android:layout_below="@+id/paymentButton"
            android:textSize="24sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helpAddSessionsText"
            android:text="@string/add_sessions_text"
            android:layout_below="@+id/helpAddSessionsTitle"
        />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termsToAdd"
            android:layout_below="@+id/helpAddSessionsText"
            android:inputType="number"
            android:width="50sp"
        />
        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helpAddSessionsText"
            android:layout_toRightOf="@+id/termsToAdd"
            android:layout_toEndOf="@+id/termsToAdd"
            android:textOff="This month"
            android:textOn="Next month"
            android:id="@+id/toggleButton"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsToAdd"
            android:id="@+id/addTermsButton"
            android:text="@string/add_sessions"
            android:onClick="buttonAddTerms"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/helpUserListTitle"
            android:text="@string/user_list"
            android:layout_below="@+id/addTermsButton"
            android:textSize="24sp"
        />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/helpUserListTitle"
            android:id="@+id/usersList"
        />
    </RelativeLayout>
</ScrollView>